Virtual keyboard: add text after cursor position, jump to start of parenthesis, jump between commas; small layout corrections

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -24,8 +24,10 @@ $vkb_width: 341px
 .toolbar
   position: fixed
 
-  // Adjust with content
-  padding-right: 5px
+  // Adjust right padding with content and left padding with right padding
+  $padding-left-right: 5px
+  padding-left:  $padding-left-right
+  padding-right: $padding-left-right
 
 $toolbar_height: 60px
 $toolbar_shadow_height: 4px
